--- a/microservice-dept-consumer-feign-82/pom.xml
+++ b/microservice-dept-consumer-feign-82/pom.xml
@@ -10,10 +10,9 @@
     </parent>
 
     <groupId>com.naruto</groupId>
-    <artifactId>microservice-dept-consumer-ribbon-81</artifactId>
+    <artifactId>microservice-dept-consumer-feign-82</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>microservice-dept-consumer-ribbon-81</name>
-
+    <name>microservice-dept-consumer-feign-82</name>
 
     <dependencies>
         <dependency>
@@ -21,20 +20,27 @@
             <artifactId>microservice-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
+
         <!-- 热部署插件-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>springloaded</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
 
         <!--eureka client-->
         <dependency>
@@ -49,6 +55,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-ribbon</artifactId>
+        </dependency>
+
+        <!--feign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
     </dependencies>
 
