--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   	<module>microservice-dept-provider-8001</module>
     <module>microservice-dept-provider-8002</module>
     <module>microservice-dept-provider-8003</module>
+    <module>microservice-dept-provider-hystrix-8004</module>
   	<module>microservice-dept-consumer-80</module>
   	<module>microservice-eureka-server-7001</module>
   	<module>microservice-eureka-server-7002</module>
   	<module>microservice-eureka-server-7003</module>
     <module>microservice-dept-consumer-ribbon-81</module>
     <module>microservice-dept-consumer-feign-82</module>
+    <module>microservice-dept-provider-hystrix-8004</module>
   </modules>
 </project>
