--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /CodeQuality/CodeQuality.iml
 /DataStructuresAlgorithms/DataStructuresAlgorithms.iml
 /.idea/checkstyle-idea.xml
+/.idea/encodings.xml
